Fixed Scrollbar!
Finally I fixed the scrolling it should be able to skip songs now :D

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
  @import url("https://fonts.googleapis.com/css?family=Raleway:400,400i,700");
+
 /* Debugging */
  .debug main * {
 	 outline: solid 0.25rem rgba(255, 0, 0, 0.25);
@@ -77,21 +78,29 @@
 	 color: rgba(0, 0, 0, 0.75);
 	 width: 17rem;
 	 transition: 0.5s;
+	 height: auto;
 	 transform: translateX(-200%);
 	 position: absolute;
 	 margin-top: 1.5rem;
-	 overflow: auto;
+	 overflow-y: auto;
 	 z-index: 10;
 	 will-change: transform;
+
+
 }
  .audioPlayer .audioPlayerList.isActive {
 	 transform: translateX(0);
-	 height: 2000px;
+	 height: 500px;
+	 overflow-y: auto;
+	 scrollbar-width: thin; 
+	 scrollbar-color: black white;
+	 
 }
  .audioPlayer .audioPlayerList .item {
 	 margin-bottom: 1.5rem;
 	 border-left: 0.1rem solid transparent;
 	 transition: 0.2s;
+	 
 }
  .audioPlayer .audioPlayerList .item:hover {
 	 padding-left: 0.5rem;
@@ -286,3 +295,27 @@
 
 
 }
+
+::-webkit-scrollbar {
+	width: 15px;
+  }
+
+  ::-webkit-scrollbar-track {
+	background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+	background-color: transparent 10%;
+  }
+
+  ::-webkit-scrollbar-thumb {
+	background-color: transparent 10%;
+	border-radius: 20px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+	background-color: transparent 10%;
+	border-radius: 20px;
+	border: 6px solid transparent;
+	background-clip: content-box;
+  }
